Fix logo alignment and add events to close dropdown

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -71,10 +71,7 @@ small {
   margin-bottom: 6rem;
 }
 
-.logo {
-}
-
-.logo summary {
+.logo summary span {
   padding: 1rem;
   display: flex;
   align-items: center;
